--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "googleapis": "^144.0.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "googleapis": "^144.0.0",
     "html-to-image": "^1.11.13",
     "jszip": "^3.10.1",
     "lucide-react": "^0.555.0",
